# newsletter_rust_api

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20220927144557_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
