[package]
name = "email_news_subscription"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_news_subscription"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"]}
serde-aux = "3"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
once_cell = "1"
log = "0.4.17"
tracing-log = "0.1"
tracing-actix-web = "0.6.1"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
